# gnome-remote-shell

./: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.in  gnome-remote-shell.spec.in
po/: ChangeLog  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  en_CA.po  en_GB.po  es.po  fr.po  ga.po  hr.po  ms.po  nl.po  no.po  pa.po  pt_BR.po  ru.po  sq.po  sr.po  sr@Latn.po  wa.po
src/: Makefile.am  gnome-remote-shell.c  gnome-remote-shell.desktop.in  gnome-remote-shell.glade  gnome-remote-shell.h
src/help/C/: Makefile.am  gnome-remote-shell-C.omf  gnome-remote-shell.xml
